# tungsten-ui

./: .gitignore  LICENSE  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  tungsten-ui-completion-0.3.0.vsix
scripts/: build-heroicons.js  build-lucide.js
tungsten_ui/: __init__.py  apps.py  urls.py  utils.py  views.py
tungsten_ui/static/tungsten_ui/css/: components.css  input.css  safelist-tailwindcss.txt
tungsten_ui/static/tungsten_ui/js/: components.js  heroicons.json  htmx-handlers.js  lucide-loader.js  lucide.json  tg-confirm.js
tungsten_ui/templates/: init-components.html  init-scripts.html  init.html
tungsten_ui/templates/cotton/: avatar.html  avatar_group.html  badge.html  base.html  breadcrumb.html  breadcrumbs.html  button.html  button_group.html  callout.html  card.html  checkbox.html  chip.html  combobox.html  combobox_autocomplete.html  combobox_multi.html  combobox_multi_autocomplete.html  command_palette.html  confirm_modal.html  container.html  dark_mode_switch.html  filter_container.html  filter_options.html  filter_range.html  icon.html  modal.html  pagination.html  pricing_plan.html  pricing_plans.html  pricing_table.html  pricing_tier.html  progress.html  radio.html  range.html  range_slider.html  select.html  tab.html  tabs.html  text.html  theme_picker.html  toast.html  (+1 more)
tungsten_ui/templates/cotton/dropdown/: index.html
tungsten_ui/templates/cotton/form/: input.html  switch.html  textarea.html
tungsten_ui/templates/cotton/layout/: sidebar.html
tungsten_ui/templates/cotton/layout/partial/: footer.html  navbar.html
tungsten_ui/templates/cotton/menu/: index.html  item.html  separator.html  submenu.html
tungsten_ui/templates/cotton/navbar/: index.html  item.html  submenu.html
tungsten_ui/templates/cotton/tab/: group.html  panel.html
tungsten_ui/templates/cotton/table/: cell.html  column.html  columns.html  index.html  row.html  rows.html
tungsten_ui/templatetags/: __init__.py  components_tags.py
